Create about  page and contact page

--- a/footer.html
+++ b/footer.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="assets/grass-2.png" alt="Footer image" class="footer-img">
+    <img src="assets/images/grass.png" alt="Footer image" class="footer-img">
     <footer class="footer">
         <p class="grand-finale">The grand finale! Or is it? Stay tuned...</p>
         <div class="acc">
