--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="icon" href="assets/images/logo.png" type="image/x-icon" sizes="16x16 32x32 48x48">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <title>Chlunidia</title>
 </head>
@@ -12,27 +13,26 @@
 <body>
     <div id="navbar-container"></div>
     <section class="section-1">
-        <div class="button-container">
-            <button class="custom-button">Mobile App Developer</button>
-            <button class="custom-button">Web Developer</button>
-        </div>
-        <img src="assets/home-new.png" alt="home" class="home-img"></img>
+        <img src="assets/images/home-img.png" alt="home" class="home-img"></img>
+        <a id="button-link" href="#section-2">
+            <img id="button-image" src="assets/images/btn-img.png" alt="Click me">
+        </a>
     </section>
-    <section class="section-2">
+    <section class="section-2" id="section-2">
         <h1 class="section-title">Achievements</h1>
         <div class="achievements">
             <div class="slider-container">
                 <div class="certificate-card">
-                    <img class="certificate-img" src="assets/sertif-1.jpg" alt="Certificate 1">
+                    <img class="certificate-img" src="assets/sertif/sertif-1.jpg" alt="Certificate 1">
                 </div>
                 <div class="certificate-card">
-                    <img class="certificate-img" src="assets/sertif-2.jpg" alt="Certificate 2">
+                    <img class="certificate-img" src="assets/sertif/sertif-2.jpg" alt="Certificate 2">
                 </div>
                 <div class="certificate-card">
-                    <img class="certificate-img" src="assets/sertif-3.jpg" alt="Certificate 3">
+                    <img class="certificate-img" src="assets/sertif/sertif-3.jpg" alt="Certificate 3">
                 </div>
                 <div class="certificate-card">
-                    <img class="certificate-img" src="assets/sertif-4.jpg" alt="Certificate 4">
+                    <img class="certificate-img" src="assets/sertif/sertif-4.jpg" alt="Certificate 4">
                 </div>
             </div>
         </div>
