--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="icon" href="assets/images/logo.png" type="image/x-icon" sizes="16x16 32x32 48x48">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <title>Document</title>
 </head>
 <body>
     <div id="navbar-container"></div>
-    <div id="footer-container"></div>
+    <div class="contact-container">
+        <div class="contact-main">
+            <div class="contact-content">
+                <h2>Contact Me!</h2>
+                <form action="#" method="post" class="contact-form">
+                    <input type="text" id="name" name="name" required placeholder="Enter Your Name">
+                    <input type="email" id="email" name="email" required placeholder="Enter Your Email">
+                    <textarea id="message" name="message" rows="4" required placeholder="Your Message"></textarea>
+                    <button class="btn-contact" type="submit">Send<i class="fas fa-paper-plane"></i></button>
+                </form>
+            </div>
+            <div class="contact-img">
+                <img id="contact-image" src="assets/images/contact.png" alt="Contact">
+            </div>
+        </div>
+    </div>
 </body>
 <script src="script.js"></script>
 </html>
