--- a/navbar.html
+++ b/navbar.html
@@ -10,7 +10,7 @@
     <div class="navbar">
         <nav>
             <div class="logo-container">
-                <img src="assets/logo.png" alt="logo" class="logo">
+                <img src="assets/images/logo.png" alt="logo" class="logo">
                 <p class="logo-heading">Chlunidia</p>
             </div>
             <div class="menu-toggle">
