Create portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,44 @@
 </head>
 <body>
     <div id="navbar-container"></div>
+    <div class="portfolio-container">
+        <!-- Card 1 -->
+        <div class="portfolio-card">
+            <img class="portfolio-img" src="assets/images/omotrash.png" alt="Project 1">
+            <div class="portfolio-details">
+                <h3 class="project-title">Project 1</h3>
+                <p class="project-description">Description of Project 1.</p>
+            </div>
+        </div>
+        <div class="portfolio-card">
+            <img class="portfolio-img" src="assets/images/appsel.png" alt="Project 1">
+            <div class="portfolio-details">
+                <h3 class="project-title">Project 2</h3>
+                <p class="project-description">Description of Project 2.</p>
+            </div>
+        </div>
+        <div class="portfolio-card">
+            <img class="portfolio-img" src="assets/images/pokedex.png" alt="Project 1">
+            <div class="portfolio-details">
+                <h3 class="project-title">Project 3</h3>
+                <p class="project-description">Description of Project 3.</p>
+            </div>
+        </div>
+        <div class="portfolio-card">
+            <img class="portfolio-img" src="assets/images/scoreboard.png" alt="Project 1">
+            <div class="portfolio-details">
+                <h3 class="project-title">Project 4</h3>
+                <p class="project-description">Description of Project 4.</p>
+            </div>
+        </div>
+        <div class="portfolio-card">
+            <img class="portfolio-img" src="assets/images/web.png" alt="Project 1">
+            <div class="portfolio-details">
+                <h3 class="project-title">Project 5</h3>
+                <p class="project-description">Description of Project 5.</p>
+            </div>
+        </div>
+    </div>
     <div id="footer-container"></div>
 </body>
 <script src="script.js"></script>
