--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
         <div class="contact-main">
             <div class="contact-content">
                 <h2>Contact Me!</h2>
-                <form action="#" method="post" class="contact-form">
+                <form action="#" class="contact-form">
                     <input type="text" id="name" name="name" required placeholder="Enter Your Name">
                     <input type="email" id="email" name="email" required placeholder="Enter Your Email">
                     <textarea id="message" name="message" rows="4" required placeholder="Your Message"></textarea>
@@ -26,6 +26,7 @@
             </div>
         </div>
     </div>
+    <div id="footer-container"></div>
 </body>
 <script src="script.js"></script>
 </html>
