--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="icon" href="assets/images/logo.png" type="image/x-icon" sizes="16x16 32x32 48x48">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <title>Document</title>
+    <title>Contact Me!</title>
 </head>
 <body>
     <div id="navbar-container"></div>
