--- a/navbar.html
+++ b/navbar.html
@@ -24,6 +24,7 @@
             </ul>
         </nav>
     </div>
+    <img src="assets/images/navbar.png" alt="Navbar image" class="navbar-img">
 </body>
 <script src="script.js"></script>
 </html>
