--- a/portfolio.html
+++ b/portfolio.html
@@ -1,54 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="icon" href="assets/images/logo.png" type="image/x-icon" sizes="16x16 32x32 48x48">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <title>Document</title>
+    <title>Portfolio</title>
 </head>
+
 <body>
     <div id="navbar-container"></div>
     <div class="portfolio-container">
         <!-- Card 1 -->
         <div class="portfolio-card">
-            <img class="portfolio-img" src="assets/images/omotrash.png" alt="Project 1">
+            <div class="portfolio-img-container">
+                <img class="portfolio-img" src="assets/portfolio/omotrash.png" alt="Project 1">
+            </div>
             <div class="portfolio-details">
-                <h3 class="project-title">Project 1</h3>
+                <h3 class="project-title">Omotrash</h3>
                 <p class="project-description">Description of Project 1.</p>
             </div>
         </div>
         <div class="portfolio-card">
-            <img class="portfolio-img" src="assets/images/appsel.png" alt="Project 1">
+            <div class="portfolio-img-container">
+                <img class="portfolio-img" src="assets/portfolio/appsel.png" alt="Project 1">
+            </div>
             <div class="portfolio-details">
-                <h3 class="project-title">Project 2</h3>
+                <h3 class="project-title">AppSel</h3>
                 <p class="project-description">Description of Project 2.</p>
             </div>
         </div>
         <div class="portfolio-card">
-            <img class="portfolio-img" src="assets/images/pokedex.png" alt="Project 1">
+            <div class="portfolio-img-container">
+                <img class="portfolio-img" src="assets/portfolio/pokedex.png" alt="Project 1">
+            </div>
             <div class="portfolio-details">
-                <h3 class="project-title">Project 3</h3>
+                <h3 class="project-title">Pokedex</h3>
                 <p class="project-description">Description of Project 3.</p>
             </div>
         </div>
         <div class="portfolio-card">
-            <img class="portfolio-img" src="assets/images/scoreboard.png" alt="Project 1">
+            <div class="portfolio-img-container">
+                <img class="portfolio-img" src="assets/portfolio/scoreboard.png" alt="Project 1">
+            </div>
             <div class="portfolio-details">
-                <h3 class="project-title">Project 4</h3>
+                <h3 class="project-title">Scoreboard</h3>
                 <p class="project-description">Description of Project 4.</p>
             </div>
         </div>
         <div class="portfolio-card">
-            <img class="portfolio-img" src="assets/images/web.png" alt="Project 1">
+            <div class="portfolio-img-container">
+                <img class="portfolio-img" src="assets/portfolio/web.png" alt="Project 1">
+            </div>
             <div class="portfolio-details">
-                <h3 class="project-title">Project 5</h3>
+                <h3 class="project-title">Personal Website</h3>
                 <p class="project-description">Description of Project 5.</p>
+            </div>
+        </div>
+    </div>
+    <div class="portfolio-overlay" onclick="closePortfolioModal()"></div>
+    <div id="modal-container" class="portfolio-modal-container">
+        <div class="portfolio-modal-content">
+            <span class="close-portfolio-modal" onclick="closePortfolioModal()">&times;</span>
+            <div class="portfolio-modal-details">
+                <h3 class="portfolio-modal-title"></h3>
+                <img class="portfolio-modal-img" src="" alt="Project Image">
+                <p class="portfolio-card-description"></p>
             </div>
         </div>
     </div>
     <div id="footer-container"></div>
 </body>
 <script src="script.js"></script>
+
 </html>
