Co-authored-by: Muhammad Ayash Al-Fatih <Ayash13@users.noreply.github.com>

--- a/navbar.html
+++ b/navbar.html
@@ -13,10 +13,12 @@
                 <img src="assets/images/logo.png" alt="logo" class="logo">
                 <p class="logo-heading">Chlunidia</p>
             </div>
-            <div class="menu-toggle">
-                <i class="fas fa-bars"></i>
+            <div class="menu-toggle" onclick="toggleMenu()">
+                <span></span>
+                <span></span>
+                <span></span>
             </div>
-            <ul class="nav-links">
+            <ul class="nav-links" id="menu-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
@@ -24,6 +26,7 @@
             </ul>
         </nav>
     </div>
+    
     <img src="assets/images/navbar.png" alt="Navbar image" class="navbar-img">
 </body>
 <script src="script.js"></script>
