--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="navbar-container"></div>
     <section class="section-1">
         <img src="assets/images/home-img.png" alt="home" class="home-img"></img>
-        <a id="button-link" href="#section-2">
+        <a class="button-explore" id="button-link" href="#section-2">
             <img id="button-image" src="assets/images/btn-img.png" alt="Click me">
         </a>
     </section>
@@ -27,7 +27,7 @@
                         <div class="certificate-img-container">
                             <img class="certificate-img" src="assets/sertif/sertif-4.jpg" alt="Certificate 4">
                         </div>
-                        <div class="certificate-details">
+                        <div  class="certificate-details">
                             <h3 class="certificate-title">Memulai Pemrograman dengan Kotlin (Dicoding Indonesia)</h3>
                             <p class="certificate-description">Description of Certificate 1.</p>
                         </div>
