Create home container

--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
 <body>
     <div id="navbar-container"></div>
     <section class="section-1">
-        <img src="assets/images/home-img.png" alt="home" class="home-img"></img>
-        <a class="button-explore" id="button-link" href="#section-2">
-            <img id="button-image" src="assets/images/btn-img.png" alt="Click me">
-        </a>
+        <div class="home-container">
+            <img src="assets/images/home-img.png" alt="home" class="home-img"></img>
+            <a class="button-explore" id="button-link" href="#section-2">
+                <img id="button-image" src="assets/images/btn-img.png" alt="Click me">
+            </a>
+        </div>
     </section>
     <section class="section-2" id="section-2">
         <h1 class="section-title">Achievements</h1>
@@ -27,7 +29,7 @@
                         <div class="certificate-img-container">
                             <img class="certificate-img" src="assets/sertif/sertif-4.jpg" alt="Certificate 4">
                         </div>
-                        <div  class="certificate-details">
+                        <div class="certificate-details">
                             <h3 class="certificate-title">Memulai Pemrograman dengan Kotlin (Dicoding Indonesia)</h3>
                             <p class="certificate-description">Description of Certificate 1.</p>
                         </div>
