--- a/contact.html
+++ b/contact.html
@@ -15,9 +15,11 @@
         <div class="contact-main">
             <div class="contact-content">
                 <h2>Contact Me!</h2>
-                <form action="#" class="contact-form">
+                <form onsubmit="sendEmail(); reset(); return false;" class="contact-form">
                     <input type="text" id="name" name="name" required placeholder="Enter Your Name">
-                    <input type="email" id="email" name="email" required placeholder="Enter Your Email">
+                    <input type="text" id="email" name="email" required placeholder="Enter Your Email">
+                    <input type="text" id="phone" name="phone" required placeholder="Enter Your Phone Number">
+                    <input type="text" id="subject" name="subject" required placeholder="Enter Your Subject">
                     <textarea id="message" name="message" rows="4" required placeholder="Your Message"></textarea>
                     <button class="btn-contact" type="submit">Send<i class="fas fa-paper-plane"></i></button>
                 </form>
@@ -28,6 +30,8 @@
         </div>
     </div>
     <div id="footer-container"></div>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="script.js"></script>
 </body>
-<script src="script.js"></script>
 </html>
