Add descriptions for certificates and portfolios

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
                         </div>
                         <div class="certificate-details">
                             <h3 class="certificate-title">Memulai Pemrograman dengan Kotlin (Dicoding Indonesia)</h3>
-                            <p class="certificate-description">Description of Certificate 1.</p>
+                            <p class="certificate-description">I received this certificate upon completing the IDCamp
+                                2023 Android Developer path. IDCamp is a scholarship program organized by Indosat
+                                Ooredoo Hutchison, and the classes are hosted on Dicoding.</p>
                         </div>
                     </div>
                     <div class="certificate-card">
@@ -40,7 +42,22 @@
                         </div>
                         <div class="certificate-details">
                             <h3 class="certificate-title">Gold Medal PKMM AST-PTMA</h3>
-                            <p class="certificate-description">Description of Certificate 1.</p>
+                            <p class="certificate-description">I received this certificate after winning a gold medal in
+                                the PKMM (Program Kreativitas Mahasiswa Perguruan Tinggi Muhammadiyah 'Aisyiyah)
+                                competition. I achieved the Gold medal as part of a team with our project titled
+                                'Trashify: Ekosistem Masyarakat Sadar Pemilahan Sampah Menggunakan Aplikasi Berbasi
+                                Android Dengan Menggunakan Algoritma Machine Learning.'
+
+                                The Program Kreativitas Mahasiswa Perguruan Tinggi Muhammadiyah 'Aisyiyah (PKMM) is an
+                                initiative by the Association of Science and Technology of Muhammadiyah 'Aisyiyah
+                                Universities (AST-PTMA). It provides a platform for students to showcase their
+                                creativity and innovation. The program has various categories, such as PKM Riset Eksakta
+                                (Research in Exact Sciences), PKM Kewirausahaan (Entrepreneurship), PKM Pengabdian
+                                Kepada Masyarakat (Community Service), PKM Penerapan IPTEK (Application of Science and
+                                Technology), and PKM Karsa Cipta (Innovative Idea).
+
+                                I took part in the Karsa Cipta category, specifically focusing on Innovative Ideas, with
+                                two separate teams, and I was a member of one of those teams.</p>
                         </div>
                     </div>
                     <div class="certificate-card">
@@ -49,7 +66,12 @@
                         </div>
                         <div class="certificate-details">
                             <h3 class="certificate-title">Bronze Medal PKMM AST-PTMA</h3>
-                            <p class="certificate-description">Description of Certificate 1.</p>
+                            <p class="certificate-description">I received this certificate after winning a bronze medal
+                                in the PKMM (Program Kreativitas Mahasiswa Perguruan Tinggi Muhammadiyah 'Aisyiyah)
+                                competition. I
+                                achieved the bronze medal as part of a team with our project titled 'Monitoring Dan
+                                Pencatatan Konsultasi Dokter Dan Pasien Berbasis Speech Recognition Untuk Mencegah
+                                Terjadinya Malapraktik.'</p>
                         </div>
                     </div>
                     <div class="certificate-card">
