--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,11 @@
             </div>
             <div class="portfolio-details">
                 <h3 class="project-title">Omotrash</h3>
-                <p class="project-description">Description of Project 1.</p>
+                <p class="project-description">This app streamlines recycling by allowing users to log in securely with
+                    their Google accounts via Firebase. Users can submit details about recyclable waste, including its
+                    nature and pickup address. Integrated with Google Maps, the app makes it easy to locate waste pickup
+                    points. The displayed data includes a button guiding waste collectors to the pickup location using
+                    Google Maps, promoting efficient and sustainable recycling.</p>
             </div>
         </div>
         <div class="portfolio-card">
@@ -29,7 +33,9 @@
             </div>
             <div class="portfolio-details">
                 <h3 class="project-title">AppSel</h3>
-                <p class="project-description">Description of Project 2.</p>
+                <p class="project-description">AppSel is a user interface (UI) application developed with the Flutter
+                    framework. Inspired by the design and functionality of MyTelkomsel, it provides a similar user
+                    experience.</p>
             </div>
         </div>
         <div class="portfolio-card">
@@ -38,7 +44,8 @@
             </div>
             <div class="portfolio-details">
                 <h3 class="project-title">Pokedex</h3>
-                <p class="project-description">Description of Project 3.</p>
+                <p class="project-description">The Flutter Pokédex UI App presents a visually appealing and responsive
+                    user interface for exploring Pokémon information, developed using the Flutter framework</p>
             </div>
         </div>
         <div class="portfolio-card">
@@ -47,7 +54,8 @@
             </div>
             <div class="portfolio-details">
                 <h3 class="project-title">Scoreboard</h3>
-                <p class="project-description">Description of Project 4.</p>
+                <p class="project-description"> A simple Flutter application, the Scoreboard, has been crafted to
+                    efficiently calculate and manage scores.</p>
             </div>
         </div>
         <div class="portfolio-card">
@@ -56,7 +64,10 @@
             </div>
             <div class="portfolio-details">
                 <h3 class="project-title">Personal Website</h3>
-                <p class="project-description">Description of Project 5.</p>
+                <p class="project-description"> I've created my own portfolio website with a visually appealing design
+                    using HTML, CSS, and JavaScript. The layout is carefully designed to highlight my skills, projects,
+                    and accomplishments in a way that's visually attractive, providing users with a positive and
+                    memorable experience.</p>
             </div>
         </div>
     </div>
