--- a/index.html
+++ b/index.html
@@ -16,78 +16,80 @@
 </head>
 
 <body>
-    <div style="color: transparent; background-color:transparent;" class="navbar">
-        <nav>
-            <div class="logo-container">
-                <img src="assets/images/logo.png" alt="logo" class="logo">
-                <p class="logo-heading">Chlunidia</p>
-            </div>
-            <input class="checkbox" type="checkbox" id="menu-toggle" />
-            <div class="hamburger-lines">
-                <span class="line line1"></span>
-                <span class="line line2"></span>
-                <span class="line line3"></span>
-            </div>
-            <ul class="nav-links" id="menu-links">
-                <li><a href="#" onclick="showSection('home')">Home</a></li>
-                <li><a href="#" onclick="showSection('about')">About</a></li>
-                <li><a href="#" onclick="showSection('portfolio')">Portfolio</a></li>
-                <li><a href="#" onclick="showSection('contact')" class="button-text">Contact</a></li>
-            </ul>
-        </nav>
-        <img src="assets/images/navbar.png" alt="Navbar image" class="navbar-img">
-    </div>
-    <br>
-
-    <!-- Sections -->
-    <div id="home" class="section">
-        <div class="home-container">
-            <img src="assets/images/home-img.png" alt="home" class="home-img">
-            <a class="button-explore" id="button-link" href="#section-2">
-                <img id="button-image" src="assets/images/btn-img.png" alt="Click me">
-            </a>
+    <div class="content">
+        <div style="color: transparent; background-color:transparent;" class="navbar">
+            <nav>
+                <div class="logo-container">
+                    <img src="assets/images/logo.png" alt="logo" class="logo">
+                    <p class="logo-heading">Chlunidia</p>
+                </div>
+                <input class="checkbox" type="checkbox" id="menu-toggle" />
+                <div class="hamburger-lines">
+                    <span class="line line1"></span>
+                    <span class="line line2"></span>
+                    <span class="line line3"></span>
+                </div>
+                <ul class="nav-links" id="menu-links">
+                    <li><a href="#" onclick="showSection('home')">Home</a></li>
+                    <li><a href="#" onclick="showSection('about')">About</a></li>
+                    <li><a href="#" onclick="showSection('portfolio')">Portfolio</a></li>
+                    <li><a href="#" onclick="showSection('contact')" class="button-text">Contact</a></li>
+                </ul>
+            </nav>
+            <img src="assets/images/navbar.png" alt="Navbar image" class="navbar-img">
         </div>
-    </div>
-    <div id="about" class="section" style="display:none;"></div>
-    <div id="portfolio" class="section" style="display:none;"></div>
-    <div id="contact" class="section" style="display:none;">
-        <div class="contact-page">
-            <div class="contact-card">
-                <h2>Contact Me!</h2>
-                <img src="assets/images/contact.png" alt="Contact Me!">
+        <div class="main-content">
+            <!-- Sections -->
+            <div id="home" class="section">
+                <div class="home-container">
+                    <img src="assets/images/home-img.png" alt="home" class="home-img">
+                    <a class="button-explore" id="button-link" href="#section-2">
+                        <img id="button-image" src="assets/images/btn-img.png" alt="Click me">
+                    </a>
+                </div>
             </div>
-            <div class="contact-form-container">
-                <h2>Get in Touch</h2>
-                <p>Feel free to drop us a line below!</p>
-                <form onsubmit="sendEmail(); reset(); return false;" class="contact-form">
-                    <input type="text" id="name" name="name" required placeholder="Your Name">
-                    <input type="text" id="email" name="email" required placeholder="Your Email">
-                    <textarea id="message" name="message" rows="4" required
-                        placeholder="Typing your message here..."></textarea>
-                    <button class="btn-contact" type="submit">SEND</button>
-                </form>
+            <div id="about" class="section" style="display:none;"></div>
+            <div id="portfolio" class="section" style="display:none;"></div>
+            <div id="contact" class="section" style="display:none;">
+                <div class="contact-page">
+                    <div class="contact-card">
+                        <h2>Contact Me!</h2>
+                        <img src="assets/images/contact.png" alt="Contact Me!">
+                    </div>
+                    <div class="contact-form-container">
+                        <h2>Get in Touch</h2>
+                        <p>Feel free to drop me a line below!</p>
+                        <form onsubmit="sendEmail(); reset(); return false;" class="contact-form">
+                            <input type="text" id="name" name="name" required placeholder="Your Name">
+                            <input type="text" id="email" name="email" required placeholder="Your Email">
+                            <textarea id="message" name="message" rows="4" required
+                                placeholder="Typing your message here..."></textarea>
+                            <button class="btn-contact" type="submit">SEND</button>
+                        </form>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
-    <div class="overlay"></div>
-    <div class="modal-container">
-        <div class="modal-content">
-            <span class="close-modal" onclick="closeCertificateModal()">&times;</span>
-            <div class="modal-details">
-                <h3 class="modal-title"></h3>
-                <img class="modal-img" src="" alt="Certificate Image">
-                <p class="modal-description"></p>
+            <div id="overlay" class="overlay"></div>
+            <div class="modal-container">
+                <div class="modal-content">
+                    <span class="close-modal" onclick="closeCertificateModal()">&times;</span>
+                    <div class="modal-details">
+                        <h3 class="modal-title"></h3>
+                        <img class="modal-img" src="" alt="Certificate Image">
+                        <p class="modal-description"></p>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
-    <div class="portfolio-overlay" onclick="closePortfolioModal()"></div>
-    <div id="modal-container" class="portfolio-modal-container">
-        <div class="portfolio-modal-content">
-            <span class="close-portfolio-modal" onclick="closePortfolioModal()">&times;</span>
-            <div class="portfolio-modal-details">
-                <h3 class="portfolio-modal-title"></h3>
-                <img class="portfolio-modal-img" src="" alt="Project Image">
-                <p class="portfolio-card-description"></p>
+            <div class="portfolio-overlay" onclick="closePortfolioModal()"></div>
+            <div id="modal-container" class="portfolio-modal-container">
+                <div class="portfolio-modal-content">
+                    <span class="close-portfolio-modal" onclick="closePortfolioModal()">&times;</span>
+                    <div class="portfolio-modal-details">
+                        <h3 class="portfolio-modal-title"></h3>
+                        <img class="portfolio-modal-img" src="" alt="Project Image">
+                        <p class="portfolio-card-description"></p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
