Improved navbar style for responsiveness

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <div class="content">
-        <div style="color: transparent; background-color:transparent;" class="navbar">
+        <div class="navbar">
             <nav>
                 <div class="logo-container">
                     <img src="assets/images/logo.png" alt="logo" class="logo">
@@ -34,9 +34,11 @@
                     <li><a href="#" onclick="showSection('about')">About</a></li>
                     <li><a href="#" onclick="showSection('portfolio')">Portfolio</a></li>
                     <li><a href="#" onclick="showSection('contact')" class="button-text">Contact</a></li>
+                    <img src="assets/images/navbar.png" alt="Navbar image" class="navbar-img-navlink">
                 </ul>
+                <img src="assets/images/navbar.png" alt="Navbar image" class="navbar-img">
             </nav>
-            <img src="assets/images/navbar.png" alt="Navbar image" class="navbar-img">
+            <img src="assets/images/navbar.png" alt="Navbar image" class="navbar-img-default">
         </div>
         <div class="main-content">
             <!-- Sections -->
@@ -48,9 +50,9 @@
                     </a>
                 </div>
             </div>
-            <div id="about" class="section" style="display:none;"></div>
-            <div id="portfolio" class="section" style="display:none;"></div>
-            <div id="contact" class="section" style="display:none;">
+            <div id="about" class="section"></div>
+            <div id="portfolio" class="section"></div>
+            <div id="contact" class="section">
                 <div class="contact-page">
                     <div class="contact-card">
                         <h2>Contact Me!</h2>
