Add links to credentials and projects in modals

--- a/index.html
+++ b/index.html
@@ -79,16 +79,19 @@
                     <div class="modal-details">
                         <h3 class="modal-title"></h3>
                         <img class="modal-img" src="" alt="Certificate Image">
+                        <a class="modal-link" href="#" target="_blank" style="display: none;">View Credential</a>
                         <p class="modal-description"></p>
                     </div>
                 </div>
             </div>
+
             <div id="portfolio-modal-container" class="portfolio-modal-container">
                 <div class="portfolio-modal-content">
                     <span class="close-portfolio-modal" onclick="closePortfolioModal()">&times;</span>
                     <div class="portfolio-modal-details">
                         <h3 class="portfolio-modal-title"></h3>
                         <img class="portfolio-modal-img" src="" alt="Project Image">
+                        <a class="portfolio-modal-link" href="#" target="_blank" style="display: none;">View Project</a>
                         <p class="portfolio-card-description"></p>
                     </div>
                 </div>
